# worden

./: .env  Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs  main.rs  schema.rs
src/.snippets/: dead_but_useful.rs
src/app/: mod.rs
src/errors/: handler_errors.rs  mod.rs  model_errors.rs
src/handlers/: files.rs  login.rs  mod.rs  users.rs  words.rs
src/helpers/: config.rs  database.rs  jwt.rs  mod.rs  redis.rs
src/helpers/modification/: mod.rs  users.rs  words.rs  yandex_puller.rs
src/helpers/oauth/: mod.rs  service_types.rs
src/helpers/words/: mod.rs  words_builder.rs  words_helper.rs
src/models/: mod.rs  user_words.rs  users.rs  word_matches.rs  word_types.rs  words_en.rs  words_ru.rs
src/routes/: mod.rs
src/services/: file_service.rs  login_service.rs  mod.rs  word_service.rs
