[package]
name = "langnote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
diesel = { version = "2.1.4", features = ["mysql"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
oauth2 = "4.4.2"
redis = "0.25.4"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url-builder = "0.1.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures"] }

[[bench]]
name = "benchmarks"
harness = false
